--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
     
     <head>
+
         <meta charset="utf-8">
         <title>najlepsze miejsca na podróż</title>
         <link rel="stylesheet" href="main.css">
@@ -13,7 +14,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-dark">
-            <a class="navbar-brand" href="#"><img src="symbol.png" height=40px></a>
+            <a class="navbar-brand" href="#"><img src="symbol.png" height="40px"></a>
             <!--collapsable-->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
